Token fields and Copernicus db
- Expect group_names instead of group_ids

- Add Copernicus db collection
